@@ -1,11 +1,11 @@
 /*
- * Copyright 2005-2010 the original author or authors.
+ * Copyright 2005-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,12 +16,15 @@
 
 package org.springframework.ws.server.endpoint.mapping.jaxb;
 
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-import javax.xml.bind.JAXBContext;
-import javax.xml.bind.JAXBException;
-import javax.xml.bind.JAXBIntrospector;
-import javax.xml.bind.annotation.XmlRootElement;
+
 import javax.xml.namespace.QName;
+
+import jakarta.xml.bind.JAXBContext;
+import jakarta.xml.bind.JAXBException;
+import jakarta.xml.bind.JAXBIntrospector;
+import jakarta.xml.bind.annotation.XmlRootElement;
 
 import org.springframework.core.MethodParameter;
 import org.springframework.ws.context.MessageContext;
@@ -30,25 +33,24 @@ import org.springframework.ws.server.endpoint.support.PayloadRootUtils;
 import org.springframework.xml.transform.TransformerHelper;
 
 /**
- * Implementation of the {@link org.springframework.ws.server.EndpointMapping EndpointMapping} interface that uses the
- * JAXB2 {@link XmlRootElement} annotation to map methods to request payload root elements.
+ * Implementation of the {@link org.springframework.ws.server.EndpointMapping
+ * EndpointMapping} interface that uses the JAXB2 {@link XmlRootElement} annotation to map
+ * methods to request payload root elements.
+ * <p>
+ * Endpoints typically have the following form:
  *
- * <p>Endpoints typically have the following form:
- * <pre>
+ * <pre><code class='java'>
  * &#64;Endpoint
  * public class MyEndpoint{
  *	  public void doSomethingWithRequest(&#64;RequestBody MyRootElement rootElement) {
  *		 ...
  *	  }
- * }
- * </pre>
- * where MyRootElement is annotated with {@code @XmlRootElement}:
- * <pre>
+ * }</code></pre> where MyRootElement is annotated with {@code @XmlRootElement}:
+ * <pre><code class='java'>
  * &#64;XmlRootElement(name = "myRoot", namespace = "http://springframework.org/spring-ws")
  * public class MyRootElement {
  *	 ...
- * }
- * </pre>
+ * }</code></pre>
  *
  * @author Arjen Poutsma
  * @since 2.0
@@ -80,16 +82,13 @@ public class XmlRootElementEndpointMapping extends AbstractAnnotationMethodEndpo
 
 	private QName handleRootElement(Class<?> parameterType) {
 		try {
-			Object param = parameterType.newInstance();
+			Object param = parameterType.getDeclaredConstructor().newInstance();
 			QName result = getElementName(parameterType, param);
 			if (result != null) {
 				return result;
 			}
 		}
-		catch (InstantiationException e) {
-			// ignore
-		}
-		catch (IllegalAccessException ex) {
+		catch (InvocationTargetException | NoSuchMethodException | InstantiationException | IllegalAccessException ex) {
 			// ignore
 		}
 		return null;
@@ -108,6 +107,8 @@ public class XmlRootElementEndpointMapping extends AbstractAnnotationMethodEndpo
 
 	@Override
 	protected QName getLookupKeyForMessage(MessageContext messageContext) throws Exception {
-		return PayloadRootUtils.getPayloadRootQName(messageContext.getRequest().getPayloadSource(), transformerHelper);
+		return PayloadRootUtils.getPayloadRootQName(messageContext.getRequest().getPayloadSource(),
+				this.transformerHelper);
 	}
+
 }
