@@ -1,11 +1,11 @@
 /*
- * Copyright 2018 the original author or authors.
+ * Copyright 2005-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -13,7 +13,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package org.springframework.xml.transform;
+
+import java.lang.reflect.InvocationTargetException;
 
 import javax.xml.XMLConstants;
 import javax.xml.transform.TransformerFactory;
@@ -23,10 +26,12 @@ import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
 /**
+ * General utilities of {@link TransformerFactory}.
+ *
  * @author Greg Turnquist
  * @since 3.0.5
  */
-public class TransformerFactoryUtils {
+public abstract class TransformerFactoryUtils {
 
 	private static final Log log = LogFactory.getLog(TransformerFactoryUtils.class);
 
@@ -39,14 +44,14 @@ public class TransformerFactoryUtils {
 
 	/**
 	 * Build an {@link TransformerFactory} and prevent external entities from accessing.
-	 *
 	 * @see TransformerFactory#newInstance()
 	 */
 	public static TransformerFactory newInstance(Class<? extends TransformerFactory> transformerFactoryClass) {
 		try {
-			return defaultSettings(transformerFactoryClass.newInstance());
-		} catch (InstantiationException | IllegalAccessException e) {
-			throw new TransformerFactoryConfigurationError(e,
+			return defaultSettings(transformerFactoryClass.getDeclaredConstructor().newInstance());
+		}
+		catch (InvocationTargetException | NoSuchMethodException | InstantiationException | IllegalAccessException ex) {
+			throw new TransformerFactoryConfigurationError(ex,
 					"Could not instantiate TransformerFactory [" + transformerFactoryClass + "]");
 		}
 	}
@@ -57,20 +62,25 @@ public class TransformerFactoryUtils {
 	private static TransformerFactory defaultSettings(TransformerFactory factory) {
 		try {
 			factory.setAttribute(XMLConstants.ACCESS_EXTERNAL_DTD, "");
-		} catch (IllegalArgumentException e) {
+		}
+		catch (IllegalArgumentException ex) {
 			if (log.isWarnEnabled()) {
-				log.warn(XMLConstants.ACCESS_EXTERNAL_DTD + " property not supported by " + factory.getClass().getCanonicalName());
+				log.warn(XMLConstants.ACCESS_EXTERNAL_DTD + " property not supported by "
+						+ factory.getClass().getCanonicalName());
 			}
 		}
-		
+
 		try {
 			factory.setAttribute(XMLConstants.ACCESS_EXTERNAL_STYLESHEET, "");
-		} catch (IllegalArgumentException e) {
+		}
+		catch (IllegalArgumentException ex) {
 			if (log.isWarnEnabled()) {
-				log.warn(XMLConstants.ACCESS_EXTERNAL_STYLESHEET + " property not supported by " + factory.getClass().getCanonicalName());
+				log.warn(XMLConstants.ACCESS_EXTERNAL_STYLESHEET + " property not supported by "
+						+ factory.getClass().getCanonicalName());
 			}
 		}
 
 		return factory;
 	}
+
 }
